# CI6235-Red-Light-Running

./: README.md
1.prepare_dataset/auto_label/: CI6235_darknet_auto_labelling.py  CI6235_generate_vocdata.py  CI6235_get_manual_dataset.py  CI6235_yolo_pvoc.py
1.prepare_dataset/frame_extraction/: CI6235_data_augumentation.py  CI6235_extract_frames.py
2.training/convert2tflite/: CI6235_convert2tflite.sh
2.training/data/: CI6235_create_tf_record.py
2.training/models/CI6235_RLR_EarlyStopping_6000/: pipeline.config  readme_d.md
2.training/tf_object_detection_api/models/research/: training_time.txt
2.training/tf_object_detection_api/models/research/object_detection/: CI6235_model_main.py  export_tflite_ssd_graph.py  export_tflite_ssd_graph_lib.py
2.training/tf_object_detection_api/models/research/pycocotools/: cocoeval.py
2.training/tf_object_detection_api/models/research/resnet/pycocotools/: _mask.c
2.training/train/: CI6235_train.sh
3.entire_system/RLR_Demo/: CMakeLists.txt  build.sh  mot_benchmark  run_app.sh
3.entire_system/RLR_Demo/include/: CI6235_traffic_light.h  track.h  utils.h
3.entire_system/RLR_Demo/src/: CI6235_main.cpp  CI6235_tracker.cpp  CI6235_traffic_light.cpp  track.cpp
